Fixed Scrollbar issue on the main page

--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,6 @@
+body{
+  overflow-x: hidden;
+}
 .firstSection {
   background-color: #0a183d;
 }
